--- a/org.knime.timeseries/plugin.xml
+++ b/org.knime.timeseries/plugin.xml
@@ -66,7 +66,7 @@
             deprecated="false"
             factory-class="org.knime.timeseries.node.dateshift.DateShiftNodeFactory">
       </node>
-      <node deprecated="false"
+      <node deprecated="true"
             category-path="/applications/timeseries/timeseries_legacy"
             factory-class="org.knime.timeseries.node.timemissvaluehandler.TimeMissValueNodeFactory"/>
    </extension>
