First commit of Stefano's code
STATE: AP-8159 (Java Snippet Joiner)
https://knime-com.atlassian.net/browse/AP-8159

--- a/org.knime.ext.sun/plugin.xml
+++ b/org.knime.ext.sun/plugin.xml
@@ -20,5 +20,11 @@
       <node
             category-path="/flowcontrol/switches"
             factory-class="org.knime.ext.sun.nodes.script.node.ifswitch.JavaIfSwitchNodeFactory"/>
+      <node
+            category-path="/scripting/java-snippet"
+            deprecated="false"
+            factory-class="org.knime.ext.sun.nodes.script.node.joiner.JavaJoinerNodeFactory"
+            id="org.knime.ext.sun.nodes.script.node.joiner.JavaJoinerNodeFactory">
+      </node>
    </extension>
 </plugin>
