AP-7806: Registered hook for creating OpenAPI definitions
AP-7806 (Save OpenAPI definition to workflow directory on workflow save)
https://knime-com.atlassian.net/browse/AP-7806

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -609,4 +609,10 @@
             factoryClass="org.knime.core.data.vector.bytevector.IntArrayToDenseByteVectorCellConverter">
       </JavaToDataCellConverter>
    </extension>
+   <extension
+         point="org.knime.core.WorkflowSaveHook">
+      <WorkflowSaveHook
+            class="org.knime.core.openapi.OpenAPIDefinitionGenerator">
+      </WorkflowSaveHook>
+   </extension>
 </plugin>
