--- a/org.knime.workbench.editor/plugin.xml
+++ b/org.knime.workbench.editor/plugin.xml
@@ -638,7 +638,7 @@
          point="org.knime.core.WizardNodeView">
       <wizardNodeView
             description="This browser uses the native system browser that SWT can use. In a typical environment this should be Internet Explorer on Windows and WebKit on Linux and Mac."
-            name="Internal SWT Browser"
+            name="Internal SWT Browser (not recommended)"
             viewClass="org.knime.workbench.editor2.WizardNodeView">
       </wizardNodeView>
    </extension>
