Disabled schemas.jar/ant builder
The builder needs to be re-enabled when the schema files change, which
will then cause a change on the schemas.jar which needs to be checked
in. 

This change is made so that people developing KNIME have less problems
switching branches (would otherwise need to stash always).

--- a/org.knime.core.pmml/.project
+++ b/org.knime.core.pmml/.project
@@ -5,6 +5,7 @@
 	<projects>
 	</projects>
 	<buildSpec>
+<!-- Disabled to prevent outgoing changes on schemas.jar - needs to be temporarily re-enabled when we change the schemas
 		<buildCommand>
 			<name>org.eclipse.buckminster.ant.AntBuilder</name>
 			<arguments>
@@ -22,6 +23,7 @@
 				</dictionary>
 			</arguments>
 		</buildCommand>
+-->
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
