--- a/org.knime.core/.project
+++ b/org.knime.core/.project
@@ -14,6 +14,7 @@
 				</dictionary>
 			</arguments>
 		</buildCommand>
+<!-- Disabled to prevent outgoing changes on schemas.jar - needs to be temporarily re-enabled when we change the schemas
 		<buildCommand>
 			<name>org.eclipse.buckminster.ant.AntBuilder</name>
 			<arguments>
@@ -31,6 +32,7 @@
 				</dictionary>
 			</arguments>
 		</buildCommand>
+-->
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
