--- a/org.knime.core.pmml/.classpath
+++ b/org.knime.core.pmml/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/eclipse"/>
 	<classpathentry kind="src" output="bin/xmlbeans" path="src/xmlbeans"/>
+	<classpathentry exported="true" kind="lib" path="lib/schemas.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin/eclipse"/>
