AP-9349: Implement iterator over subset of columns by index and by name
AP-9349 (Column-based storage: row iterator for subset of columns)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -359,6 +359,13 @@
                serializerClass="org.knime.core.data.MissingCell$MissingSerializer">
          </serializer>
       </DataType>
+      <DataType
+            cellClass="org.knime.core.data.UnmaterializedCell">
+         <serializer
+               cellClass="org.knime.core.data.UnmaterializedCell"
+               serializerClass="org.knime.core.data.UnmaterializedCell$UnmaterializedSerializer">
+         </serializer>
+      </DataType>
      
       <DataType
             cellClass="org.knime.core.data.vector.bitvector.SparseBitVectorCell">
@@ -490,13 +497,6 @@
          <serializer
                cellClass="org.knime.core.data.xml.PMMLBlobCell"
                serializerClass="org.knime.core.data.xml.PMMLBlobCell$PMMLSerializer">
-         </serializer>
-      </DataType>
-      <DataType
-            cellClass="org.knime.core.data.MissingCell">
-         <serializer
-               cellClass="org.knime.core.data.MissingCell"
-               serializerClass="org.knime.core.data.MissingCell$MissingSerializer">
          </serializer>
       </DataType>
    </extension>
