AP-10301: WIP - C node (e.g. jupyter) with specific exec env (python) added

--- a/org.knime.base/plugin.xml
+++ b/org.knime.base/plugin.xml
@@ -2006,6 +2006,11 @@
             deprecated="false"
             factory-class="org.knime.base.node.dummies.b.BNodeFactory">
       </node>
+      <node
+            category-path="/dummies"
+            deprecated="false"
+            factory-class="org.knime.base.node.dummies.c.CNodeFactory">
+      </node>
    </extension>
    
       
